# analects

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Dockerfile.test  Makefile  README.md  cca-compose.yml  config.toml  config.toml.example  deploy-cca.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
confucius/: __main__.py
confucius/cli/: main.py
confucius/core/: config.py  tracing.py
confucius/lib/: entry_repl.py
confucius/orchestrator/: anthropic.py  prompts.py
confucius/server/: __init__.py  app.py  backends.py  dual_model_orchestrator.py  expert_router.py  http_entry.py  http_routed_entry.py  models.py  note_observer.py  note_search_extension.py  streaming.py  tool_groups.py  utility_tools.py
docs/: README.md  cca-agent-as-model-session-summary.md  mcp-tools-migration-guide.md
public/: index.html
scripts/: ci.py  dashboard.py  run_eval.py  run_swebench.py  utils.py
stack/embedding-server/: Dockerfile  embedding-stack.yml
stack/functionary-router/: .dockerignore  Dockerfile  docker-compose.yml
stack/memgraph/: docker-compose.yml
stack/phoenix/: docker-compose.yml
stack/qdrant/: qdrant-stack.yml
stack/redis/: redis-stack.yml
stack/searxng/: searxng-settings.yml  searxng-stack.yml
stack/vllm-notetaker/: Dockerfile  docker-compose.yml
tests/: cca_client.py  conftest.py  evaluators.py  report_generator.py  requirements-test.txt
tests/coder/: test_bash_execution.py  test_code_edit_flow.py  test_code_intelligence.py  (+5 more)
workspace-sync/: sync.py  sync.sh
(+74 files in other folders)
