[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "confucius"
version = "0.1.0"
description = "Confucius core utilities (OSS slice)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Meta", email = "opensource@meta.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
confucius = "confucius.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "user: User identification and profile management tests",
    "websearch: Web search and URL fetching tests",
    "integration: Multi-tool end-to-end integration tests",
    "slow: Tests that take more than 60 seconds",
]
timeout = 600
asyncio_mode = "auto"
# Enforce sequential execution — disable parallel plugins that could
# overwhelm the CCA server with concurrent LLM requests.
addopts = "-p no:xdist -p no:randomly --tb=short"
